css/main.css
/**************************************************
Fonts
Droid Serif
Droid Sans
Droid Sans Mono

Serif:
Lora
Neutron

Sans-Serif:
Lato
Roboto

font-family: 'Open Sans Condensed', sans-serif;
font-family: 'PT Sans', sans-serif;
font-family: 'Ubuntu', sans-serif;

Font Scaling
6.854rem
4.236rem
2.618rem
1.618rem
1.0rem
0.618rem

Colour scheme
https://color.adobe.com/Scifi-Scheme-color-theme-8804031/
#8BB9BF - Headers
#5D7B7F - A
#B9F6FF
#8EBEC4 - P
#A7DEE5 - Nav Borders

**************************************************/

@import 'https://fonts.googleapis.com/css?family=Droid+Sans|Droid+Sans+Mono|Droid+Serif';
@import url('https://fonts.googleapis.com/css?family=Lora|Neuton');
@import url('https://fonts.googleapis.com/css?family=Lato|Roboto');
@import url('https://fonts.googleapis.com/css?family=Open+Sans+Condensed:300|PT+Sans|Ubuntu');
* {
    padding: 0;
    margin: 0;
    box-sizing: border-box;
}

html {
    font-size: 16px;
    line-height: 1.6;
    font-family: 'Droid Sans', 'Lato', 'Roboto', sans-serif;
}

.clearfix {
    clear: both;
}


/*************************** 
DEFAULTS -- UNCHANGING STYLES
***************************/

html {
    color: #B9F6FF;
    /* Fallback Color: */
}

body {
    background: black;
    background-image: url("../images/background.png");
    background-repeat: repeat;
}

.masthead {
    background: black;
    background-image: url("../images/headerFooter.png");
    background-repeat: repeat;
    border-bottom: solid black 4px;
    box-shadow: 0 4px 2px -2px darkslategray;
    /*margin-bottom: 10px;*/
    padding: 5px;
}

.footer {
    background: black;
    background-image: url("../images/headerFooter.png");
    background-repeat: repeat;
    border-top: solid black 4px;
    box-shadow: 0 -4px 2px -2px darkslategray;
    margin-top: 10px;
    padding: 5px;
}

h1,
h2,
h3,
h4,
h5,
h6 {
    color: #8BB9BF;
    padding-bottom: 10px;
}

p {
    color: #8EBEC4;
}

a,
a:link,
a:visited {
    color: #5D7B7F;
    text-decoration: none;
}

a:active,
a:focus,
a:hover {
    background: #A7DEE5;
    opacity: 0.5;
    text-decoration: none;
}


/*************************** 
FONT DEFAULTS 
***************************/

h1 {
    font: bold 4.236rem 'Droid Serif', 'Neuton', 'Lora', serif;
}

h2 {
    font: bold 2.618rem 'Droid Serif', 'Neuton', 'Lora', serif;
}

li,
p,
a {
    font: bold 1.618rem 'Droid Sans', 'Lato', 'Roboto', sans-serif;
}

pre,
code,
kbd {
    font: normal 1.0rem 'Droid Sans Mono', 'Ubuntu', 'PT Sans', 'Open Sans Condensed', sans-serif;
}

a,
a:link,
a:visited {
    font: bold 1.618rem 'Droid Sans', 'Lato', 'Roboto', sans-serif;
}


/***************************
    LAYOUT - MOBILE FIRST
***************************/
/* Mobile View */
@media screen and (min-width:0px) {
    .wrapper {
        width: 95%;
        margin: 0 auto;
    }
    header {
        width: 100%;
    }
    nav {
        width: 100%;
    }
    nav>ul {
        width: 100%;
        background: rgba(119, 136, 153, 0.15);
        border: 2px solid darkslategray;
    }
    nav li {
        width: 100%;
        list-style: none;
        border-top: 1px solid darkslategray;
        border-bottom: 1px solid darkslategray;
    }
    nav a,
    nav a:link,
    nav a:visited {
        display: block;
        font-size: 1.618rem;
        text-align: center;
    }
    main {
        width: 100%;
    }
    .col {
        float: none;
        width: 100%;
        margin: 0 auto;
        padding-right: 0;
    }
    .col img {
        max-width: 100%;
        width: 100%;
        height: auto;
        background-color: azure;
        float: none;
    }
    footer {
        clear: left;
        width: 100%;
    }
}

/* Tablet View */
@media screen and (min-width:600px) {
    .wrapper {
        width: 100%;
        margin: 0 auto;
    }
    header {
        width: 100%;
    }
    nav {
        width: 90%;
    }
    nav>ul {
        width: 100%;
        border: 2px solid darkslategray;
    }
    nav li {
        float: left;
        width: 20%;
        list-style: none;
    }
    nav a,
    nav a:link,
    nav a:visited {
        display: block;
        font-size: 1.618rem;
        text-align: center;
    }
    main {
        width: 90%;
    }
    .col {
        float: left;
        width: 50%;
        margin: 0 auto;
        padding-right: 15px;
    }
    .col img {
        max-width: 60%;
        width: 60%;
        height: auto;
        background-color: azure;
        float: left;
    }
    footer {
        clear: left;
        width: 90%;
    }
}

/* Desktop View */
@media screen and (min-width: 800px) {
    .wrapper {
        width: 100%;
        margin: 0 auto;
    }
    header {
        width: 100%;
    }
    nav {
        width: 90%;
    }
    nav>ul {
        width: 100%;
        border: 0px;
    }
    nav li {
        float: left;
        border: 0px;
        width: 20%;
        list-style: none;
    }
    nav a,
    nav a:link,
    nav a:visited {
        display: block;
        font-size: 1.618rem;
        text-align: center;
    }
    main {
        width: 90%;
    }
    .col {
        float: left;
        width: 50%;
        margin: 0 auto;
        padding-right: 15px;
    }
    .col img {
        max-width: 50%;
        width: 50%;
        height: auto;
        background-color: azure;
        float: left;
    }
    footer {
        clear: left;
        width: 100%;
    }
}

/* Large Desktop View */
@media screen and (min-width: 1200px) {
    .wrapper {
        width: 100%;
        margin: 0 auto;
    }
    header {
        width: 100%;
    }
    nav {
        width: 30%;
        height: 100%;
        float: left;
    }
    nav>ul {
        width: 100%;
        border: 0px;
    }
    nav li {
        border: 0px;
        width: 100%;
        list-style: none;
    }
    nav a,
    nav a:link,
    nav a:visited {
        display: block;
        font-size: 1.618rem;
        text-align: center;
    }
    main {
        width: 70%;
        float: left;
    }
    .col {
        float: left;
        width: 50%;
        margin: 0 auto;
        padding-right: 15px;
    }
    .col img {
        max-width: 55%;
        width: 55%;
        height: auto;
        background-color: azure;
        float: left;
    }
    footer {
        clear: left;
        width: 100%;
    }
}

/* Center the Content */
.navigation {
    margin: 0 auto;
}

.main {
    margin: 0 auto;
}

footer {
    margin: 0 auto;
}

